[gd_scene load_steps=9 format=3 uid="uid://xwbdh51rypnn"]

[ext_resource type="Script" path="res://scenes/encounters/combat.gd" id="1_ggtus"]
[ext_resource type="Texture2D" uid="uid://coiod8vae00r" path="res://assets/sprites/character/combat_human-Sheet.png" id="2_q2xej"]
[ext_resource type="Texture2D" uid="uid://50nhfd6fsbln" path="res://assets/sprites/icons/whiteflag.png" id="3_o54a0"]

[sub_resource type="Animation" id="Animation_wu06e"]
resource_name = "Attack"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13, 14, 15]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"player_attack"
}]
}

[sub_resource type="Animation" id="Animation_0uvan"]
resource_name = "Damage"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [16, 17, 18]
}

[sub_resource type="Animation" id="Animation_iyh0w"]
resource_name = "Idle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_gjpag"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3tyrb"]
_data = {
"Attack": SubResource("Animation_wu06e"),
"Damage": SubResource("Animation_0uvan"),
"Idle": SubResource("Animation_iyh0w"),
"RESET": SubResource("Animation_gjpag")
}

[node name="Combat" type="Node2D"]
script = ExtResource("1_ggtus")

[node name="EnemyMarker" type="Marker2D" parent="."]
position = Vector2(24.5, -4.5)

[node name="PlayerMarker" type="Marker2D" parent="."]
position = Vector2(-6.5, -4.5)

[node name="Player" type="Sprite2D" parent="."]
position = Vector2(-20, 0)
texture = ExtResource("2_q2xej")
hframes = 8
vframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player"]
speed_scale = 0.5
libraries = {
"": SubResource("AnimationLibrary_3tyrb")
}

[node name="RetreatButton" type="TextureButton" parent="."]
offset_left = -80.0
offset_right = -64.0
offset_bottom = 16.0
texture_normal = ExtResource("3_o54a0")

[connection signal="pressed" from="RetreatButton" to="." method="_on_button_pressed"]
